.metadata/.plugins/org.eclipse.cdt.ui/SPI_Com.build.log
15:50:57 **** Incremental Build of configuration Debug for project SPI_Com ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m0 -std=gnu11 -g3 -DUSE_HAL_DRIVER -DSTM32F051x8 -DDEBUG -c -I../Core/Inc -I../Drivers/STM32F0xx_HAL_Driver/Inc -I../Drivers/STM32F0xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F0xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
../Core/Src/main.c:44:1: error: unknown type name 'UART_HandleTypeDef'; did you mean 'SPI_HandleTypeDef'?
 UART_HandleTypeDef huart2;
 ^~~~~~~~~~~~~~~~~~
 SPI_HandleTypeDef
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:104:4: warning: implicit declaration of function 'HAL_UART_Transmit'; did you mean 'HAL_SPI_Transmit'? [-Wimplicit-function-declaration]
    HAL_UART_Transmit(&huart2, (uint8_t *)txData, strlen(txData), 10);
    ^~~~~~~~~~~~~~~~~
    HAL_SPI_Transmit
../Core/Src/main.c: In function 'MX_USART2_UART_Init':
../Core/Src/main.c:169:9: error: request for member 'Instance' in something not a structure or union
   huart2.Instance = USART2;
         ^
../Core/Src/main.c:170:9: error: request for member 'Init' in something not a structure or union
   huart2.Init.BaudRate = 38400;
         ^
../Core/Src/main.c:171:9: error: request for member 'Init' in something not a structure or union
   huart2.Init.WordLength = UART_WORDLENGTH_8B;
         ^
../Core/Src/main.c:171:28: error: 'UART_WORDLENGTH_8B' undeclared (first use in this function)
   huart2.Init.WordLength = UART_WORDLENGTH_8B;
                            ^~~~~~~~~~~~~~~~~~
../Core/Src/main.c:171:28: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/main.c:172:9: error: request for member 'Init' in something not a structure or union
   huart2.Init.StopBits = UART_STOPBITS_1;
         ^
../Core/Src/main.c:172:26: error: 'UART_STOPBITS_1' undeclared (first use in this function)
   huart2.Init.StopBits = UART_STOPBITS_1;
                          ^~~~~~~~~~~~~~~
../Core/Src/main.c:173:9: error: request for member 'Init' in something not a structure or union
   huart2.Init.Parity = UART_PARITY_NONE;
         ^
../Core/Src/main.c:173:24: error: 'UART_PARITY_NONE' undeclared (first use in this function); did you mean 'FLASH_PROC_NONE'?
   huart2.Init.Parity = UART_PARITY_NONE;
                        ^~~~~~~~~~~~~~~~
                        FLASH_PROC_NONE
../Core/Src/main.c:174:9: error: request for member 'Init' in something not a structure or union
   huart2.Init.Mode = UART_MODE_TX_RX;
         ^
../Core/Src/main.c:174:22: error: 'UART_MODE_TX_RX' undeclared (first use in this function); did you mean 'USART_TDR_TDR'?
   huart2.Init.Mode = UART_MODE_TX_RX;
                      ^~~~~~~~~~~~~~~
                      USART_TDR_TDR
../Core/Src/main.c:175:9: error: request for member 'Init' in something not a structure or union
   huart2.Init.HwFlowCtl = UART_HWCONTROL_NONE;
         ^
../Core/Src/main.c:175:27: error: 'UART_HWCONTROL_NONE' undeclared (first use in this function); did you mean 'UART_PARITY_NONE'?
   huart2.Init.HwFlowCtl = UART_HWCONTROL_NONE;
                           ^~~~~~~~~~~~~~~~~~~
                           UART_PARITY_NONE
../Core/Src/main.c:176:9: error: request for member 'Init' in something not a structure or union
   huart2.Init.OverSampling = UART_OVERSAMPLING_16;
         ^
../Core/Src/main.c:176:30: error: 'UART_OVERSAMPLING_16' undeclared (first use in this function); did you mean '__UART_BRR_SAMPLING16'?
   huart2.Init.OverSampling = UART_OVERSAMPLING_16;
                              ^~~~~~~~~~~~~~~~~~~~
                              __UART_BRR_SAMPLING16
../Core/Src/main.c:177:9: error: request for member 'Init' in something not a structure or union
   huart2.Init.OneBitSampling = UART_ONE_BIT_SAMPLE_DISABLE;
         ^
../Core/Src/main.c:177:32: error: 'UART_ONE_BIT_SAMPLE_DISABLE' undeclared (first use in this function); did you mean 'UART_ONE_BIT_SAMPLE_DISABLED'?
   huart2.Init.OneBitSampling = UART_ONE_BIT_SAMPLE_DISABLE;
                                ^~~~~~~~~~~~~~~~~~~~~~~~~~~
                                UART_ONE_BIT_SAMPLE_DISABLED
../Core/Src/main.c:178:9: error: request for member 'AdvancedInit' in something not a structure or union
   huart2.AdvancedInit.AdvFeatureInit = UART_ADVFEATURE_NO_INIT;
         ^
../Core/Src/main.c:178:40: error: 'UART_ADVFEATURE_NO_INIT' undeclared (first use in this function)
   huart2.AdvancedInit.AdvFeatureInit = UART_ADVFEATURE_NO_INIT;
                                        ^~~~~~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:179:7: warning: implicit declaration of function 'HAL_UART_Init'; did you mean 'HAL_SPI_Init'? [-Wimplicit-function-declaration]
   if (HAL_UART_Init(&huart2) != HAL_OK)
       ^~~~~~~~~~~~~
       HAL_SPI_Init
make: *** [Core/Src/subdir.mk:33: Core/Src/main.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

15:50:57 Build Failed. 20 errors, 2 warnings. (took 637ms)

